<resources>
    <string name="app_name">FamilyPlanner</string>
    <string name="login_title">LOGIN</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="name">Name</string>
    <string name="Gender">Gender</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="create_a_username">Create a username</string>
    <string name="create_a_password">Create a password</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="create_account">Create Account</string>
    <string name="create_plan">Create Plan</string>
    <string name="join_plan">Join Plan</string>
    <string name="check_plan">Check Plan</string>
    <string name="log_out">Log Out</string>
    <string name="create_plan_id">Create Plan ID</string>
    <string name="enter">Enter</string>
    <string name="plan_id_instructions">Plan ID can be 2-12 word characters</string>
    <string name="exit">Exit</string>
    <string name="join_plan_id">Join Plan ID</string>
    <string name="leave_plan">Leave Plan</string>
    <string name="plan_title">Plan:</string>
    <string name="add">Add</string>
    <string name="add_time_slot">Add Time Slot</string>
    <string name="time">Time</string>
    <string name="enter_time">Enter Time (HH:MM)</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="added_by">Added By:</string>
    <string name="completed_by">Completed By:</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="apply">Apply</string>
    <string name="calendar">Calendar</string>
    <string name="refresh">Refresh</string>
</resources>