<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otherbackground"
    tools:context=".MemberCreatePlanActivity">

    <EditText
        android:id="@+id/editTextCreatePlanId"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/create_plan_id"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:onClick="enterOnClick"
        android:text="@string/enter"
        app:layout_constraintStart_toEndOf="@+id/editTextCreatePlanId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planIdInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/plan_id_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreatePlanId" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="exitOnClick"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planIdInstructions" />
</androidx.constraintlayout.widget.ConstraintLayout>